2008-03-08  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletWindow.close): 
	Fixed issue exhibited on Windows with buttons becoming dead

2008-03-07 Peter Landgren <peter.talken@telia.com>
	* src/plgins/NotRelated.py: Issue #1795 author information update
	* src/plgins/rel_sv.py: Fixed issues #1881 and 1910

2008-03-05 Raphael Ackermann <raphael.ackermann@gmail.com>
	* src/data/Makefile.am: add new css files and delete old ones.
	* src/images/Makefile.am: add new images for Narrative web report
	0001912: make fails 

2008-03-07  Benny Malengier <benny.malengier@gramps-project.org>
	* src/const.py.in : new const for third party plugin page
	* src/ViewManager.py: in help, menu option for the third party plugins

2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/QuickReports.py: optionally pass in kwargs
	* src/plugins/DefaultGramplets.py: added generation summary to pedigree
	* src/plugins/FilterByName.py: new filter "people by list"
	* src/DataViews/GrampletView.py: handle "people by list" links

2008-03-07  Peter Landgren  <peter.talken@telia.com>
    * src/GrampsCfg.py
    * src/Config/_GrampsConfigKeys.py
    * data/gramps.schemas.in
    Removal of xml-autobackup issue #1897

2008-03-07  Douglas S. Blank  <dblank@cs.brynmawr.edu>
	* src/DataViews/GrampletView.py (GrampletView): 
	turned GrampletView into a PersonNavView to get Forward/Next/Home

2008.03.06 Jim Sack <jgsack@san.rr.com>
	* src/GrampsDbUtils/_WriteGedcom.py: #1849 gedcom output: omit 'Y'
	when there is subpordinate data in event (person or family)

2008.03.06 Jim Sack <jgsack@san.rr.com>
	* src/test/gedread_util.py: update test utility per r10169 changes that
	removed the "TRANSACTIONS" option. 

2008-03-06 Jason Simanek <jsimanek@gmail.com>
	* src/NarrativeWeb.py: 
	* src/images/NWeb_Mainz_Header.png: added
	* src/images/somerights20.gif: modified
	* src/images/NWeb_Mainz_MidLight.png: added
	* src/images/favicon.ico: added