@@ -1,3 +1,6 @@
+2008-03-08  Douglas S. Blank  <dblank@saliva.brynmawr.edu>
+	* src/DataViews/GrampletView.py (GrampletWindow.close): 
+
 2008-03-08  Douglas S. Blank  <dblank@cs.brynmawr.edu>
 	* src/DataViews/GrampletView.py (GrampletWindow.close): 
 	Fixed issue exhibited on Windows with buttons becoming dead
